fix module alignment

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
   background: #0f0f1a;
   color: white;
   text-align: center;
+  justify-content: center;
+  margin: 0;
   padding-bottom: 80px;
 }
 
@@ -60,21 +62,24 @@ button:hover {
 
 .module {
   opacity: 0;
+  justify-content: center;
   transform: scale(0.9);
   transition: all 0.6s ease;
   position: absolute;
   width: 100%;
   margin-top: 0px;
-  padding: 20px;
+  padding: 0px;
   padding-top: 100px;
 }
 
 .module.active {
   opacity: 1;
+  justify-content: center;
   transform: scale(1);
-  position: relative;
+  transition: opacity 0.4s ease, transform 0.4s ease;
+  position: fixed;
   margin-top: 0px;
-  padding: 20px;
+  padding: 0px;
   padding-top: 100px;
 }
 
